# chapterlm

./: .gitignore  README.md  dataset.py  fake.py  html_to_chapter.py  model.txt  predict.py  pyproject.toml  train.py
chapterlm/: Cargo.toml
chapterlm/examples/: base.rs
chapterlm/src/: albert.rs  config.rs  lib.rs  util.rs
